Bug #57579 blobs cause a thread to wait for itself endlessly

btr_estimate_n_rows_in_range_on_level(): Always do mtr_commit(),
so that the page will not remain pinned indefinitely.